# ha-mod-template

./: README.md  setup.cfg
Docs/Helpme/: modules_philosophy_REWRITE.md
src/main/: app.py
