[metadata]
name = HA-XXXXXX
version = 0.0.1
author = author
author_email = email
description = Short description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/user/HA-XXXXXX
project_urls =
    Bug Tracker = https://github.com/user/HA-XXXXXX/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src